--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +13,7 @@
     "axios": "0.26.1",
     "cors": "2.8.5",
     "express": "4.17.3",
+    "mongoose": "^6.2.8",
     "node": "17.7.1"
   }
 }
