--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "2.8.5",
     "express": "4.17.3",
     "mongoose": "^6.2.8",
-    "node": "17.7.1"
+    "node": "17.7.1",
+    "nodemon": "^2.0.15"
   }
 }
