--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "0.26.1",
+    "bcrypt": "^5.0.1",
     "cors": "2.8.5",
     "express": "4.17.3",
     "mongoose": "^6.2.8",
